# textcamp

./: .env  .gitignore  CODE_OF_CONDUCT.md  Cargo.toml  Dockerfile  README.md  example.env  production.env
assets/: logo.pxm
figures/: auth-flow.puml  render.sh
site/: about.html  index.html  tc.css  tc.js
src/: lib.rs
src/actors/: connection.rs  delivery.rs  mod.rs  periodic.rs
src/aws/: account.rs  dynamo.rs  mod.rs
src/core/: attributes.rs  authentication.rs  clock.rs  dice.rs  direction.rs  errors.rs  inventory.rs  item.rs  markup.rs  mod.rs  phrase.rs  population.rs  skills.rs  spawn.rs  update.rs  world.rs
src/core/entities/: cache.rs  mob.rs  mod.rs  space.rs
src/core/prototypes/: item_prototype.rs  mob_prototype.rs  mod.rs
src/services/: account.rs  accounts.rs  db.rs  email.rs  mod.rs  sessions.rs
src/templates/: importer.rs  item.rs  mob.rs  mod.rs  space.rs
world/items/: rock.toml
world/mobs/: hero.toml  mosquito.toml
world/spaces/: origin.toml  shed.toml
