[package]
name = "textcamp"
version = "0.1.0"
license = "GPL-3.0"
authors = ["Peat Bakke <peat@peat.org>"]
edition = "2018"
default-run = "server"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[profile.release]
debug = true # retain profiling information in release builds.

[dependencies]
dotenv = "0"
log = "0"
env_logger = "0"
actix = "0"
actix-rt = "1"
actix-web = "2"
actix-web-actors = "2"
actix-files = "0"
serde = "1"
serde_json = "1"
rand = "0"
toml = "0"
glob = "0"