[package]
name = "textcamp"
version = "0.1.0"
license = "GPL-3.0"
authors = ["Peat Bakke <peat@peat.org>"]
edition = "2018"
default-run = "server"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[profile.release]
debug = true # retain profiling information in release builds.

[dev-dependencies]
tokio-test = "*"

[dependencies]
# basic env and logging
dotenv = "0"
log = "0"
env_logger = "0"

# web stuff
actix = "0"
actix-rt = "1"
actix-web = "2"
actix-web-actors = "2"
actix-files = "0"
serde = "1"
serde_json = "1"

# what's a game without rand?
rand = "0"

# readin in templates
toml = "0"
glob = "0"

# AWS services. SES = email, Dynamo = NoSQL
rusoto_core = "0"
rusoto_sesv2 = "0"
rusoto_dynamodb = "0"
